<resources>
    <string name="app_name">Loxion Beanery</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="let_s_get_you_registered">Let\'s get you registered!!</string>
    <string name="enter_all_required_details">Enter all required details</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="logo">Logo</string>
    <string name="google_maps_api_key">AIzaSyBcup6Q9P4y4NlZFefYR_CytYlTxzIM6oI</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="public_holiday">Public Holiday</string>
    <string name="ingredients">Ingredients</string>
    <string name="gender">Gender</string>
    <string name="upcoming_orders">Upcoming orders</string>
    <string name="past_orders">Past orders</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="error_symbol">Error symbol</string>
    <string name="network_error_occurred">Network error occurred</string>
    <string name="user_profile">User Profile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit">Edit</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sex">sex</string>
    <string name="save">Save</string>
    <string name="x">X</string>
    <string name="open">Open</string>
    <string name="unavailable">Unavailable</string>
    <string name="close">Close</string>
    <string name="show_more">Show more</string>
    <string name="next">Next</string>
    <string name="network_error">Network error.</string>
    <string name="my_ingredients">My ingredients</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="r">R:</string>
    <string name="ingredient_name_e_g_cheese">Ingredient name (e.g Cheese)</string>
    <string name="add_an_ingredient">Add an Ingredient</string>
    <string name="create_menu">Create menu</string>
    <string name="add_menu">Add Menu</string>
    <string name="my_menu">My Menu</string>
    <string name="shop_name">Shop name</string>
    <string name="saved_location">Saved Location</string>
    <string name="operating_hours">Operating Hours</string>
    <string name="deactivate_shop">Deactivate Shop</string>
    <string name="edit_extras">Edit Extras</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="edit_ingredients">Edit Ingredients</string>
    <string name="edit_operating_hours">Edit Operating hours</string>
    <string name="edit_shop_profile">Edit Shop Profile</string>
    <string name="my_extras">My Extras</string>
    <string name="extra_e_g_tomato_sauce">Extra (e.g Tomato sauce)</string>
    <string name="add_an_extra">Add an extra</string>
    <string name="extras">Extras</string>
    <string name="are_you_sure">Are You Sure</string>
    <string name="retry">Retry</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="like">Like</string>
    <string name="kota_menu">Kota Menu</string>
    <string name="custom_kota">Custom kota</string>

    <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
    <string name="AdMob_app_ID">ca-app-pub-3940256099942544~3347511713</string>
    <!-- Sample AdMob Native App ID: ca-app-pub-3940256099942544/2247696110 -->
    <string name="AdMob_Native_ID">ca-app-pub-3940256099942544/2247696110</string>
    <!-- Sample AdMob Interstitial App ID: ca-app-pub-3940256099942544/1033173712 -->
    <string name="AdMob_Interstitial_ID">ca-app-pub-3940256099942544/1033173712</string>
    <string name="my_shops">My shops</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="create_shop">Create Shop</string>
    <string name="shop_registered">Shop registered</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="delete">Delete</string>
    <string name="rate">Rate</string>


    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="okay">Okay</string>
    <string name="address">Address</string>
    <string name="change_password">Change Password</string>
    <string name="profile_picture">Profile picture</string>
    <string name="change_profile_picture_button">Change profile picture button</string>
    <string name="closed">Closed</string>
    <string name="click_here_to_complete_shop_registration">Click here to complete shop registration</string>
    <string name="status">Status</string>
    <string name="more_information">More information</string>
    <string name="skip">SKIP</string>
    <string name="search">Search</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
    <string name="place_order">Place order</string>

</resources>
