<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_reorder_black_24dp"
        android:title="@string/orders" />

    <item
        android:id="@+id/nav_shops"
        android:icon="@drawable/ic_shop_black_24dp"
        android:title="@string/my_shops" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

</menu>