<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/llHead"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tvType"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/user_profile"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ripple_effect_white"
            android:gravity="center"
            android:onClick="back">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_keyboard_backspace_black_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSave"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ripple_effect_white"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:onClick="save"
            android:padding="@dimen/_8sdp"
            android:text="@string/save"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="@drawable/ripple_effect_white"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="@dimen/_8sdp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_125sdp"
                            android:layout_height="@dimen/_125sdp"
                            android:background="@drawable/ripple_effect_white"
                            app:cardCornerRadius="100dp">

                            <RelativeLayout
                                android:id="@+id/rlSmallPicture"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/ripple_effect_white"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/civProfilePicture"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/profile_picture" />

                                <ImageView
                                    android:id="@+id/ivSmall"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_centerInParent="true"
                                    android:contentDescription="@string/change_profile_picture_button"
                                    android:onClick="ProfilePicture"
                                    android:src="@drawable/ic_add_a_photo_black_24dp" />

                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/txtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/_12ssp"
                            app:met_floatingLabel="highlight" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/txtSurname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/_12ssp"
                            app:met_floatingLabel="highlight" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivAddress"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/phone_number"
                        android:src="@drawable/ic_location_on_black_24dp" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/tvAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toEndOf="@+id/ivAddress"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/address"
                        android:textSize="@dimen/_12ssp"
                        app:met_floatingLabel="highlight"
                        app:met_iconLeft="@drawable/ic_date_24dp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/sex"
                        android:src="@drawable/ic_person_pin_black_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/cbMale"
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_6sdp"
                            android:text="@string/male" />


                        <CheckBox
                            android:id="@+id/cbFemale"
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_6sdp"
                            android:text="@string/female" />

                        <CheckBox
                            android:id="@+id/cbOther"
                            style="@style/Base.TextAppearance.AppCompat.Body1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_6sdp"
                            android:text="@string/other" />

                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivPhone"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:contentDescription="@string/phone_number"
                        android:src="@drawable/ic_local_phone_black_24dp" />

                    <TextView
                        android:id="@+id/tvNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toStartOf="@id/tvChangeNum"
                        android:layout_toEndOf="@+id/ivPhone"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvChangeNum"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:background="@drawable/ripple_effect_white"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center"
                        android:onClick="editNumber"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/edit"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivEmail"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:contentDescription="@string/email_address"
                        android:src="@drawable/ic_email_black_24dp" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_toStartOf="@id/tvChangeEmail"
                        android:layout_toEndOf="@+id/ivEmail"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvChangeEmail"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:background="@drawable/ripple_effect_white"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center"
                        android:onClick="editEmail"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/edit"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />


                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect_white"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:onClick="ChangePassword"
                android:padding="@dimen/_8sdp"
                android:text="@string/change_password"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>