<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/icon"
            android:contentDescription="@string/logo" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView_logo">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/let_s_get_you_registered"
                android:textColor="@color/Black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_below="@id/tv_login"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/first_name"
                        android:textAllCaps="true"
                        android:textColor="@color/Black"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/et_bg"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/White"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/last_name"
                        android:textAllCaps="true"
                        android:textColor="@color/Black"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/et_bg"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/White"
                        android:textSize="15sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/email_address"
                        android:layout_marginTop="10dp"
                        android:textAllCaps="true"
                        android:textColor="@color/Black"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/et_bg"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/White"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/phone_number"
                        android:textAllCaps="true"
                        android:textColor="@color/Black"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/et_bg"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/White"
                        android:textSize="15sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/Black"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/et_bg"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/White"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/confirm_password"
                        android:textAllCaps="true"
                        android:textColor="@color/Black"
                        android:textSize="15sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/et_bg"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/White"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linlay1"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textColor="@color/Black"
                android:background="@drawable/btn_bg"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/register"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/trasparent"
            android:text="@string/login"
            android:textColor="@color/Black"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="true"/>
    </RelativeLayout>
</RelativeLayout>